crates/nextmeeting-core/src/format/snapshots/nextmeeting_core__format__golden_tests__json_empty.snap
---
source: crates/nextmeeting-core/src/format/golden_tests.rs
assertion_line: 399
expression: output
---
{
  "meetings": [],
  "count": 0
}
