crates/nextmeeting-core/src/format/snapshots/nextmeeting_core__format__golden_tests__json_single_upcoming.snap
---
source: crates/nextmeeting-core/src/format/golden_tests.rs
assertion_line: 412
expression: output
---
{
  "meetings": [
    {
      "id": "evt-15",
      "title": "Team Standup",
      "start_time": "[start_time]",
      "end_time": "[end_time]",
      "time_display": "In 15 minutes",
      "is_all_day": false,
      "is_ongoing": false,
      "minutes_until": 15,
      "meeting_url": "https://meet.google.com/abc-15",
      "calendar_url": "https://calendar.google.com/event/15",
      "urgency": "upcoming"
    }
  ],
  "next_meeting": {
    "id": "evt-15",
    "title": "Team Standup",
    "start_time": "[start_time]",
    "end_time": "[end_time]",
    "time_display": "In 15 minutes",
    "is_all_day": false,
    "is_ongoing": false,
    "minutes_until": 15,
    "meeting_url": "https://meet.google.com/abc-15",
    "calendar_url": "https://calendar.google.com/event/15",
    "urgency": "upcoming"
  },
  "count": 1
}
