crates/nextmeeting-core/src/format/snapshots/nextmeeting_core__format__golden_tests__polybar_all_day_only.snap
---
source: crates/nextmeeting-core/src/format/golden_tests.rs
assertion_line: 370
expression: output
---
All day - Team Offsite
