crates/nextmeeting-core/src/format/snapshots/nextmeeting_core__format__golden_tests__polybar_empty.snap
---
source: crates/nextmeeting-core/src/format/golden_tests.rs
assertion_line: 334
expression: output
---
No meetings
