crates/nextmeeting-core/src/format/snapshots/nextmeeting_core__format__golden_tests__polybar_ongoing.snap
---
source: crates/nextmeeting-core/src/format/golden_tests.rs
assertion_line: 358
expression: output
---
20 minutes to go - Sprint Review
