crates/nextmeeting-core/src/format/snapshots/nextmeeting_core__format__golden_tests__polybar_prefers_timed.snap
---
source: crates/nextmeeting-core/src/format/golden_tests.rs
assertion_line: 385
expression: output
---
In 15 minutes - Team Standup
