crates/nextmeeting-core/src/format/snapshots/nextmeeting_core__format__golden_tests__polybar_single_upcoming.snap
---
source: crates/nextmeeting-core/src/format/golden_tests.rs
assertion_line: 346
expression: output
---
In 15 minutes - Team Standup
